# ndk_learning

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/ndk/demo/: ExampleInstrumentedTest.java
app/src/main/cpp/: native-lib.cpp  web_task.cpp  web_task.h
app/src/main/cpp/include/: FileUtil.h  JClazzUtil.h  JniUtil.h  android_log_print.h
app/src/main/java/cn/ndk/demo/: MainActivity.java
app/src/test/java/cn/ndk/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
